US21791: fixed bug: legend section does not display correctly on small screen
Former-commit-id: 80157611e7094fbd8974cf09b5f95458419719f0

--- a/assets/less/widget.less
+++ b/assets/less/widget.less
@@ -2011,7 +2011,7 @@ background-image: -moz-linear-gradient(top,@color-white,@color-white);
     }
 
     .legendPopover {
-        max-width: 900px;
+        min-width: 900px;
     }
 
     .active {
